Ajout de l'endpoint /drink
